--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
     font-size: 16px;
 }
 
-main {
+body {
     margin: 0 auto;
     max-width: 45rem;
     padding: 0 6px;
@@ -26,16 +26,12 @@ img {
 }
 
 .grid-container {
-    /* gap: 10px; */
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(2, 1fr);
-    /* creates 2 columns with equal width */
 }
 
 @media (max-width: 550px) {
-
-    /* … */
     .grid-container {
         grid-template-columns: repeat(1, 1fr);
     }
