--- a/static/css/base.css
+++ b/static/css/base.css
@@ -48,7 +48,7 @@ figcaption {
 a,
 a:visited {
     color: #a00;
-    text-decoration: underline 1px;
+    /* text-decoration: underline 1px; */
     text-underline-offset: 2px;
 }
 
@@ -61,14 +61,14 @@ h2 {
 h1 {
     margin-top: 4rem;
     margin-bottom: 1.5rem;
-    font-size: 3.2rem;
+    font-size: 2.6rem;
 }
 
 h2 {
     font-style: italic;
     margin-top: 2.1rem;
     margin-bottom: 1rem;
-    font-size: 2.2rem;
+    font-size: 2rem;
 }
 
 p {
@@ -76,4 +76,52 @@ p {
     line-height: 2rem;
     margin-top: 1.4rem;
     margin-bottom: 1.4rem;
+}
+
+header {
+    /* background-color: #f1f1f1; */
+    /* padding: 20px; */
+}
+
+
+
+h1 a {
+    text-decoration: none;
+    color: #333;
+}
+
+p {
+    margin: 0;
+    font-size: 14px;
+    color: #666;
+}
+
+nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 10px;
+}
+
+
+
+nav ul li.current a {
+    font-weight: bold;
+}
+
+nav+nav {
+    margin-top: 10px;
+}
+
+ul:last-child {
+    margin-top: 10px;
+}
+
+ul:last-child li {
+    display: inline;
+    margin-right: 10px;
 }
