Add laatste wijziging

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
 <footer>   
     <iframe src="https://haukehout.substack.com/embed" width="480" height="150" style="background-color: #fffff8;" frameborder="0" scrolling="no"></iframe>
+    <small>Laatste wijziging: {{ .Site.Data.last_updated }}</small>
 </footer>
