--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -1,6 +1,13 @@
 {{ define "main" }}
   <main>
 <br>
- <p>Komt binnenkort</p>
+<h1>Hauke van der Mark</h1>
+<h2>Hauke van der Mark</h2>
+ <p>Op de basisschool (boerderijschool zijldijk) ben ik begonnen met houtbewerking. 
+  Tijdens de les handenarbeid maakten we daar verschillende dingen van hout zoals handbogen, boomerang, en bijvoorbeeld een kleine schildersezel.
+  Op deze schildersezel heb ik voor het eerst figuren in hout gesneden.
+</p>
+<p>Op de middelbare school(Parcival college) heb ik ook les in houtbewerking gehad. Daar heb ik onderandere een flessenhamer, krukje en een canoe. Foto's komen binnenkort.</p>
+<p>Wordt vervolgd...</p>
   </main>
   {{ end }}
