--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <header>
     <nav>
-      <h1>haukehout.nl</h1>
+      <!-- <h1>haukehout.nl</h1> -->
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/about/">About</a></li>
