--- a/assets/main.css
+++ b/assets/main.css
@@ -6,7 +6,8 @@ html {
 body {
   margin: 0 auto;
   max-width: 45rem;
-  padding: 0 6px;
+  padding: 0 8px;
+  padding-bottom: 8px;
   font-family: Palatino, 'Palatino Linotype', 'Palatino LT STD', 'Book Antiqua', Georgia, serif;
   color: #111;
 }
@@ -101,3 +102,10 @@ ul:last-child li {
 small {
   text-align: center;
 }
+
+.image-left {
+  display: flex;
+  align-items: flex-start; /* Align text to the top of the image */
+  gap: 15px; /* Space between image and text */
+}
+
