--- a/layouts/section/about.html
+++ b/layouts/section/about.html
@@ -1,24 +1,36 @@
 {{ define "main" }}
-  <main>
-<br>
-<h2>Hauke van der Mark</h2>
- <p>Op de basisschool (boerderijschool zijldijk) ben ik begonnen met houtbewerking. 
-  Tijdens de les handenarbeid maakten we daar verschillende dingen van hout zoals handbogen, boomerang en bijvoorbeeld een kleine schildersezel. Op deze schildersezel heb ik voor het eerst figuren in hout gesneden.
-</p>
-<p>Op de middelbare school(Parcival college) heb ik ook les in houtbewerking gehad. Daar heb ik onderandere een flessenhamer, krukje en een kano gemaakt.</p>
-<div class="grid-container">
-  {{ with .Site.GetPage "schoolwerkstukken" }}
-    {{ range .Resources.ByType "image" }}
-      {{ $img := .Fit "250x250" }}
-      {{ $largeImg := .Fit "750x750" }}
-      <figure>
-        <a href="{{ $largeImg.RelPermalink }}">
-          <img src="{{ $img.RelPermalink }}" alt="{{ .Name }}" loading="lazy">
-        </a>
-        <figcaption>{{ .Title | default "No caption available" }}</figcaption>
-      </figure>
+<main>
+  <br>
+  <div class="image-left">
+    {{ with .Site.GetPage "images/foto" }}
+    {{ $image := index (.Resources.Match "foto.jpeg") 0 }}
+    {{ if $image }}
+    {{ $resized := $image.Fit "75x75" }}
+    <img src="{{ $resized.RelPermalink }}" alt="{{ $image.Name }}" loading="lazy">
     {{ end }}
-  {{ end }}
-</div>
-  </main>
-  {{ end }}
+    {{ end }}
+    <h2>Hauke van der Mark</h2>
+  </div>
+  <p>Op de basisschool (boerderijschool zijldijk) ben ik begonnen met houtbewerking.
+    Tijdens de les handenarbeid maakten we daar verschillende dingen van hout zoals handbogen, boomerang en bijvoorbeeld
+    een kleine schildersezel. Op deze schildersezel heb ik voor het eerst figuren in hout gesneden.
+  </p>
+  <p>Op de middelbare school(Parcival college) heb ik ook les in houtbewerking gehad. Daar heb ik onderandere een
+    flessenhamer, krukje en een kano gemaakt.</p>
+  </div>
+  <div class="grid-container">
+    {{ with .Site.GetPage "schoolwerkstukken" }}
+    {{ range .Resources.ByType "image" }}
+    {{ $img := .Fit "250x250" }}
+    {{ $largeImg := .Fit "700x700" }}
+    <figure>
+      <a href="{{ $largeImg.RelPermalink }}">
+        <img src="{{ $img.RelPermalink }}" alt="{{ .Name }}" loading="lazy">
+      </a>
+      <figcaption>{{ .Title | default "No caption available" }}</figcaption>
+    </figure>
+    {{ end }}
+    {{ end }}
+  </div>
+</main>
+{{ end }}
