--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   <main>
-    <h2>Houtsnijwerk</h2>
+    <h2>Houtsnijwerk Portfolio</h2>
     <div class="grid-container">
       {{ with .Site.GetPage "houtsnijwerk" }}
         {{ range .Resources.ByType "image" }}
